openshift-deployments/postgresdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-file
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-file
  template:
    metadata:
      labels:
        app: postgres-file
    spec:
      containers:
        - name: postgres-file
          image: docker.io/bitnamilegacy/postgresql:16.6.0-debian-12-r2
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: postgres-data
              mountPath: /bitnami/postgresql
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-file
spec:
  selector:
    app: postgres-file
  ports:
    - name: tcp-5432
      port: 5432
      targetPort: 5432
